--- a/index.html
+++ b/index.html
@@ -6,6 +6,66 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <a href=>WEBSTUDIO</a>
+        <nav>
+        <ul>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
+        </ul>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (00) 111-11-11</a>
+        </address>
+        </nav>
+    </header>
+    <main>
+        <h1>Effective Solutions for Your Business</h1>
+            <button>Order Services</button>
+            <h3>Srategy</h3>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimaze risk.</p>
+            <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        <h2>Our team</h2>
+            <ul>
+                <li>
+                    <img src="./images/mg.jpg"
+                    alt="Mark Guerrero"
+                    width="264">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/tf.jpg"
+                    alt="Tom Ford"
+                    width="264">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/cg.jpg"
+                    alt="Camila Garcia"
+                    width="264">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/dw.jpg"
+                    alt="Daniel Wilson"
+                    width="264">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+    </main>
+    <footer>
+        <a href=>WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
