--- a/index.html
+++ b/index.html
@@ -7,31 +7,53 @@
 </head>
 <body>
     <header>
-        <a href="">WEBSTUDIO</a>
         <nav>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (00) 111-11-11</a>
+            <ul>
+                <li>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111">+11 (00) 111-11-11</a>
+                </li>
+            </ul>
         </address>
         </nav>
     </header>
     <main>
-        <h1>Effective Solutions for Your Business</h1>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
             <button>Order Services</button>
-            <h3>Srategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimaze risk.</p>
-            <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-        <h2>Our team</h2>
+        </section>
+        <section>
+            <h2>   </h2>
+            <ul>
+                <li>
+                    <h3>Srategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimaze risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+         <h2>Our team</h2>
             <ul>
                 <li>
                     <img src="./images/mg.jpg"
@@ -62,9 +84,10 @@
                     <p>UI Designer</p>
                 </li>
             </ul>
+        </section>
     </main>
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
