--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <header>
         <nav>
-        <a href="./index.html">WEBSTUDIO</a>
-        <ul>
+        <a href="./index.html">WebStudio</a>
+        <ul>    `
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
@@ -29,13 +29,13 @@
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button>Order Services</button>
+            <button type="button">Order Services</button>
         </section>
         <section>
-            <h2>   </h2>
+            <h2>str</h2>
             <ul>
                 <li>
-                    <h3>Srategy</h3>
+                    <h3>Strategy</h3>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
@@ -44,7 +44,7 @@
                 </li>
                 <li>
                     <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimaze risk.</p>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3>Technologies</h3>
@@ -53,7 +53,7 @@
             </ul>
         </section>
         <section>
-         <h2>Our team</h2>
+         <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/mg.jpg"
@@ -87,7 +87,7 @@
         </section>
     </main>
     <footer>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
