--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
+        </nav>
         <address>
             <ul>
                 <li>
@@ -24,12 +25,11 @@
                 </li>
             </ul>
         </address>
-        </nav>
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Services</button>
+            <button type="button">Order Service</button>
         </section>
         <section>
             <h2>str</h2>
