--- a/index.html
+++ b/index.html
@@ -42,115 +42,115 @@
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="top">
+            <h1 class="top-title">Effective Solutions for Your Business</h1>
+            <button class="top-button" type="button"><span class="button-link"> Order Service</span></button>
         </section>
-        <section>
+        <section class="benefits">
             <h2>Benefits</h2>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                    <h3 class="benefits-title">Strategy</h3>
+                    <p class="benefits-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
+                    <h3 class="benefits-title">Punctuality</h3>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
+                    <h3 class="benefits-title">Diligence</h3>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
+                    <h3 class="benefits-title">Technologies</h3>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
-        <section>
-         <h2>Our Team</h2>
+        <section class="team">
+         <h2 class="team-title">Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/mg.jpg"
                     alt="Mark Guerrero"
                     width="264">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-discription">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/tf.jpg"
                     alt="Tom Ford"
                     width="264">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-discription">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/cg.jpg"
                     alt="Camila Garcia"
                     width="264">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-discription">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/dw.jpg"
                     alt="Daniel Wilson"
                     width="264">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-discription">UI Designer</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Our Portfolio</h2>
+        <section class="portfolio">
+            <h2 class="portfolio-title">Our Portfolio</h2>
             <ul>
                 <li>
                     <img src="./images/bankingapp.jpg" 
                     alt="Banking App" 
                     width="360">
-                    <h3>Banking App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-name">Banking App</h3>
+                    <p class="portfolio-discription">App</p>
                 </li>
                 <li>
                     <img src="./images/cashlesspayment.jpg" 
                     alt="Cashless Payment" 
                     width="360">
-                    <h3>Cashless Payment</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-name">Cashless Payment</h3>
+                    <p class="portfolio-discription">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/mediationapp.jpg" 
                     alt="Meditation App" 
                     width="360">
-                    <h3>Meditation App</h3>
-                    <p>App</p>
+                    <h3 class="portfolio-name">Meditation App</h3>
+                    <p class="portfolio-discription">App</p>
                 </li>
                 <li>
                     <img src="./images/taxiservice.jpg" 
                     alt="Taxi Service" 
                     width="360">
-                    <h3>Taxi Service</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-name">Taxi Service</h3>
+                    <p class="portfolio-discription">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/scrinillustration.jpg" 
                     alt="Screen Illustrations" 
                     width="360">
-                    <h3>Screen Illustrations</h3>
-                    <p>Design</p>
+                    <h3 class="portfolio-name">Screen Illustrations</h3>
+                    <p class="portfolio-discription">Design</p>
                 </li>
                 <li>
                     <img src="./images/onlinecourses.jpg" 
                     alt="Online Courses" 
                     width="360">
-                    <h3>Online Courses</h3>
-                    <p>Marketing</p>
+                    <h3 class="portfolio-name">Online Courses</h3>
+                    <p class="portfolio-discription">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="page-footer">
         <a class="logo footer-logo" href="./index.html">Web <span class="logo-part">Studio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
