--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <address class="contacts">
             <ul class="contacts-list">
                 <li class="contacts-item">
-                    <a class="contacts-link" mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="contacts-link" mailto:info@devstudio.com>info@devstudio.com</a>
                 </li>
                 <li class="contacts-item">
-                    <a class="contacts-link" tel:+110001111111">+11 (000) 111-11-11</a>
+                    <a class="contacts-link" tel:+110001111111>+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
