--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
 <body>
     <header class="page-header">
+        <div class="header-container container">
         <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html">Web <span class="logo-part">Studio</span></a>
+            <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-list">
                 <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
                 <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
@@ -38,40 +39,46 @@
                 </li>
             </ul>
         </address>
+        </div>
     </header>
     <main>
         <section class="top">
+            <div class="top-container container">
             <h1 class="top-title">Effective Solutions for Your Business</h1>
             <button class="top-button" type="button"><span class="button-link"> Order Service</span></button>
+            </div>
         </section>
         <section class="benefits">
+            <div class="benefits-container container">
             <h2>Benefits</h2>
-            <ul>
-                <li>
+            <ul class="benefits-list">
+                <li class="benefits-tipe">
                     <h3 class="benefits-title">Strategy</h3>
                     <p class="benefits-text">Our goal is to identify the business problem to walk away with the perfect
                         and creative solution.</p>
                 </li>
-                <li>
+                <li class="benefits-tipe">
                     <h3 class="benefits-title">Punctuality</h3>
                     <p class="benefits-text">Bring the key message to the brand's audience for the best price within the
                         shortest possible time.</p>
                 </li>
-                <li>
+                <li class="benefits-tipe">
                     <h3 class="benefits-title">Diligence</h3>
                     <p class="benefits-text">Research and confirm brands that present the strongest digital growth
                         opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="benefits-tipe">
                     <h3 class="benefits-title">Technologies</h3>
                     <p class="benefits-text">Design practice focused on digital experiences. We bring forth a deep
                         passion for problem-solving.</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="team">
+            <div class="team-container container">
             <h2 class="team-title">Our Team</h2>
-            <ul>
+            <ul class="team-list">
                 <li class="team-menu">
                     <img src="./images/mg.jpg" alt="Mark Guerrero" width="264">
                     <h3 class="team-name">Mark Guerrero</h3>
@@ -93,47 +100,56 @@
                     <p class="team-discription">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
         <section class="portfolio">
+            <div class="portfolio-container container">
             <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul>
-                <li>
+            <ul class="portfolio-menu">
+                <div class="portfolio-first">
+                <li class="portfolio-set">
                     <img src="./images/bankingapp.jpg" alt="Banking App" width="360">
                     <h3 class="portfolio-name">Banking App</h3>
                     <p class="portfolio-discription">App</p>
                 </li>
-                <li>
+                <li class="portfolio-set">
                     <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360">
                     <h3 class="portfolio-name">Cashless Payment</h3>
                     <p class="portfolio-discription">Marketing</p>
                 </li>
-                <li>
+                <li class="portfolio-set">
                     <img src="./images/mediationapp.jpg" alt="Meditation App" width="360">
                     <h3 class="portfolio-name">Meditation App</h3>
                     <p class="portfolio-discription">App</p>
                 </li>
-                <li>
+                </div>
+                <div class="portfolio-second">
+                <li class="portfolio-set">
                     <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360">
                     <h3 class="portfolio-name">Taxi Service</h3>
                     <p class="portfolio-discription">Marketing</p>
                 </li>
-                <li>
+                <li class="portfolio-set">
                     <img src="./images/scrinillustration.jpg" alt="Screen Illustrations" width="360">
                     <h3 class="portfolio-name">Screen Illustrations</h3>
                     <p class="portfolio-discription">Design</p>
                 </li>
-                <li>
+                <li class="portfolio-set">
                     <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360">
                     <h3 class="portfolio-name">Online Courses</h3>
                     <p class="portfolio-discription">Marketing</p>
                 </li>
+                </div>
             </ul>
+            </div>
         </section>
     </main>
     <footer class="page-footer">
-        <a class="logo footer-logo" href="./index.html">Web <span class="logo-part">Studio</span></a>
+        <div class="footer-container container">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.</p>
+        </div>
     </footer>
 </body>
 
