--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
         <section class="benefits">
             <div class="benefits-container container">
-            <h2>Benefits</h2>
+            <h2 class="visually-hidden">Benefits</h2>
             <ul class="benefits-list">
                 <li class="benefits-tipe">
                     <h3 class="benefits-title">Strategy</h3>
@@ -81,23 +81,31 @@
             <ul class="team-list">
                 <li class="team-menu">
                     <img src="./images/mg.jpg" alt="Mark Guerrero" width="264">
+                    <div class="team-part">
                     <h3 class="team-name">Mark Guerrero</h3>
                     <p class="team-discription">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-menu">
                     <img src="./images/tf.jpg" alt="Tom Ford" width="264">
+                    <div class="team-part">
                     <h3 class="team-name">Tom Ford</h3>
                     <p class="team-discription">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-menu">
                     <img src="./images/cg.jpg" alt="Camila Garcia" width="264">
+                    <div class="team-part">
                     <h3 class="team-name">Camila Garcia</h3>
                     <p class="team-discription">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-menu">
                     <img src="./images/dw.jpg" alt="Daniel Wilson" width="264">
+                    <div class="team-part">
                     <h3 class="team-name">Daniel Wilson</h3>
                     <p class="team-discription">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
@@ -106,40 +114,48 @@
             <div class="portfolio-container container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-menu">
-                <div class="portfolio-first">
                 <li class="portfolio-set">
                     <img src="./images/bankingapp.jpg" alt="Banking App" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Banking App</h3>
                     <p class="portfolio-discription">App</p>
+                    </div>
                 </li>
                 <li class="portfolio-set">
                     <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Cashless Payment</h3>
                     <p class="portfolio-discription">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio-set">
                     <img src="./images/mediationapp.jpg" alt="Meditation App" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Meditation App</h3>
                     <p class="portfolio-discription">App</p>
+                    </div>
                 </li>
-                </div>
-                <div class="portfolio-second">
                 <li class="portfolio-set">
                     <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Taxi Service</h3>
                     <p class="portfolio-discription">Marketing</p>
+                    </div>
                 </li>
                 <li class="portfolio-set">
                     <img src="./images/scrinillustration.jpg" alt="Screen Illustrations" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Screen Illustrations</h3>
                     <p class="portfolio-discription">Design</p>
+                    </div>
                 </li>
                 <li class="portfolio-set">
                     <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360">
+                    <div class="portfolio-text">
                     <h3 class="portfolio-name">Online Courses</h3>
                     <p class="portfolio-discription">Marketing</p>
+                    </div>
                 </li>
-                </div>
             </ul>
             </div>
         </section>
