--- a/index.html
+++ b/index.html
@@ -365,12 +365,12 @@
             growth solutions.</p>
             </div>
         
-        <div class="footer-socials">
+            <div class="footer-socials">
             <p class="footer-sm">Social media</p>
             <ul class="footer-social">
                 <li class="footer-team-socicon">
                     <a class="footer-social-link" href="https://instagram.com" target=" _blank">
-                        <svg class="soc-icon" width="24" height="24x">
+                        <svg class="soc-icon" width="24" height="24">
                             <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
@@ -400,7 +400,8 @@
             </ul>
             </div>
         </div>
-    
+    </footer>   
+
 </body>
 
 </html>
