--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <ul class="nav-list">
                 <li class="nav-item current"><a class="nav-link current" href="./index.html">Studio</a></li>
-                <li class="nav-item current"><a class="nav-link current" href="">Portfolio</a></li>
-                <li class="nav-item current"><a class="nav-link current" href="">Contacts</a></li>
+                <li class="nav-item current"><a class="nav-link" href="">Portfolio</a></li>
+                <li class="nav-item current"><a class="nav-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="contacts">
@@ -44,7 +44,7 @@
     <main>
         <section class="top">
             <div class="top-container container">
-            <h1 class="top-title">Effective Solutions for Your Business</h1>
+            <h1 class="top-title">Effective Solutions for Your Busines</h1>
             <button class="top-button" type="button"><span class="button-link"> Order Service</span></button>
             </div>
         </section>
@@ -358,7 +358,7 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="footer-container">
+        <div class="footer-container container">
             <div class="footer-first">
             <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
