--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     id="user-name"
                     name="user-name" 
                     autofocus />
-                    <svg class="form-icon" width="18" height="18">
+                    <svg class="form-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
                     </div>
@@ -486,13 +486,13 @@
             
                 </div>
                 <div class="form-agreement">
-                    <input type="checkbox" class="visually-hidden" name="user-agreement" id="user-agreement" value="true" />
+                    <input type="checkbox" class="visually-hidden" name="user-privacy" id="user-privacy" value="true" />
                    
-                <label class="form-agreement-text" for="user-agreement">
-                    <span class="form-checkbox"><svg class="form-checkbox-icon" width="10" height="8">
-                            <use href="./images/icons.svg#icon-Vector"></use>
+                <label class="form-agreement-text" for="user-privacy">
+                    <span class="form-checkbox"><svg class="form-checkbox-icon" width="10" height="8"> 
+                 <use href="./images/icons.svg#icon-Vector"></use>
                         </svg></span>
-                    I accept the term and conditions of the <a class="pp-href" href="#" target=" _blank">Privacy Policy</a>
+                    I accept the terms and conditions of the <a class="pp-href" href="#" target=" _blank">Privacy Policy</a>
                 </label>
                 </div>
                 <button class="form-button" 
