--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                         </label>
                         <button 
                         type="submit" class="subscribe-button">Subscribe
-                            <svg class="icon-Frame" width="24" height="24">
+                            <svg class="icon-frame" width="24" height="24">
                                 <use href="./images/icons.svg#icon-Frame"></use>
                             </svg>
                     </button>
