--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 </svg>
             </div>
         </div>
-            <div class="form-field">
+            <div class="form-field-comment">
                 <label class="form-label" for="user-comment">
                     Comment
                 </label>
