--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     <label class="form-label" for="user-phone">
                         Phone</label>
                     <div class="form-wrapper">
-                        <input class="form-input" type="number" id="user-phone" name="user-phone" />
+                        <input class="form-input" type="tel" id="user-phone" name="user-phone" />
                         <svg class="form-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
