--- a/index.html
+++ b/index.html
@@ -311,22 +311,22 @@
                         <source
                         media="(min-width: 1158px)"
                         srcset="
-                        ./images/portfolio/imgbank_desk@1x.jpg 1x,
-                        ./images/portfolio/imgbank_desk@2x.jpg 2x,
+                        /images/portfolio/imgbank_desk@1x.jpg 1x,
+                        /images/portfolio/imgbank_desk@2x.jpg 2x,
                         "
                         />
                         <source 
                         media="(min-width: 768px)" 
                         srcset="
-                        ./images/portfolio/imgimgbank_tabl@1x.jpg 1x,
-                        ./images/portfolio/imgimgbank_tabl@2x.jpg 2x,
+                        /images/portfolio/imgimgbank_tabl@1x.jpg 1x,
+                        /images/portfolio/imgimgbank_tabl@2x.jpg 2x,
                         " 
                         />
                         <source 
                         media="(max-width: 767px)" 
                         srcset="
-                        ./images/portfolio/imgbank_mob@1x.jpg 1x,
-                        ./images/portfolio/imgbank_mob@2x.jpg 2x,
+                        /images/portfolio/imgbank_mob@1x.jpg 1x,
+                        /images/portfolio/imgbank_mob@2x.jpg 2x,
                         " 
                         />
                     <img 
