--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         />
                     <img 
                     class="portfolio-picture"
-                    src="./images/Portfolio/bankingapp.jpg" 
+                    src="/images/Portfolio/bankingapp.jpg" 
                     alt="Banking App" 
                     width="360"
                     height="300">
